# watchdog

./: .gitignore  README.md
blender/: README.md
gearotic/: README.md  gears.gth  pinion.stl  wheel.stl
software/: README.md  cfg.wsgi  index.html  index.js  meson.build  script.js  styles.css  w_camera.cpp  w_camera.h  w_cfg.cpp  w_cfg.h  w_command_line.cpp  w_command_line.h  w_common.h  w_control.cpp  w_control.h  w_gpio.cpp  w_gpio.h  w_hls.h  w_image_processing.cpp  w_image_processing.h  w_led.cpp  w_led.h  w_log.h  w_main.cpp  w_motor.cpp  w_motor.h  w_msg.cpp  w_msg.h  w_util.cpp  w_util.h  w_video_encode.cpp  w_video_encode.h  watchdog.cpp  watchdog.py  watchdog.service
